<resources>
    <string name="app_name">Nectar</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_guide">GuideActivity</string>

    <string name="entry">Get it Start</string>
    <string name="alarmNameLI1">Alarm Name</string>
    <string name="create_cluster">Create Cluster</string>
    <string name="name">Name</string>
    <string name="id">ID</string>
    <string name="coe">COE</string>
    <string name="image">Image</string>
    <string name="dns">DNS</string>
    <string name="keypair">Keypair</string>
    <string name="create_time">Create Time</string>
    <string name="upgrade_time">Upgrade Time</string>
    <string name="status">Status</string>


</resources>
