<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="false">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.jianqingc.nectar.fragment.clusterDetailFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal"
            android:id="@+id/clusterDetail1"
            android:layout_centerHorizontal="true"

            android:weightSum="1">

            <TextView
                android:id="@+id/clusterTemplateNameID1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textView"
                android:layout_marginLeft="5sp"
                android:layout_marginTop="20sp"
                android:layout_weight="0.3"
                android:text="@string/name"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/clusterTemplateNameID"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:layout_weight="0.7"
                android:text="Medium Text"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textIsSelectable="true" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal"
            android:layout_below="@+id/clusterDetail1"
            android:id="@+id/clusterDetail2"
            android:layout_centerHorizontal="true"

            android:weightSum="1">

            <TextView
                android:id="@+id/clusterTemplateID1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="5sp"
                android:layout_marginTop="20sp"
                android:layout_weight="0.3"
                android:text="@string/id"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/clusterTemplateID"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:layout_weight="0.7"
                android:text="Medium Text"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textIsSelectable="true" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_below="@+id/clusterDetail2"
            android:id="@+id/clusterDetail3"
            android:layout_centerHorizontal="true"

            android:weightSum="1">

            <TextView
                android:id="@+id/clusterTemplateCOEID1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="5sp"
                android:layout_marginTop="20sp"
                android:layout_weight="0.3"
                android:text="@string/coe"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/clusterTemplateCOEID"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:layout_weight="0.7"
                android:text="Medium Text"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textIsSelectable="true" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_below="@+id/clusterDetail3"
            android:id="@+id/clusterDetail4"
            android:layout_centerHorizontal="true"

            android:weightSum="1">

            <TextView
                android:id="@+id/clusterTemplateKeypairURLID1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="5sp"
                android:layout_marginTop="20sp"
                android:layout_weight="0.3"
                android:text="@string/keypair"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/clusterTemplateKeypairURLID"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:layout_weight="0.7"
                android:text="Medium Text"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textIsSelectable="true" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_below="@+id/clusterDetail4"
            android:id="@+id/clusterDetail5"
            android:layout_centerHorizontal="true"

            android:weightSum="1">

            <TextView
                android:id="@+id/clusterTemplateImagID1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="5sp"
                android:layout_marginTop="20sp"
                android:layout_weight="0.3"
                android:text="@string/image"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/clusterTemplateImageID"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:layout_weight="0.7"
                android:text="Medium Text"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textIsSelectable="true" />


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_below="@+id/clusterDetail5"
            android:id="@+id/clusterDetail6"
            android:layout_centerHorizontal="true"

            android:weightSum="1">

            <TextView
                android:id="@+id/clusterTemplateDNSID1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="5sp"
                android:layout_marginTop="20sp"
                android:layout_weight="0.3"
                android:text="@string/dns"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/clusterTemplateDNSID"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:layout_weight="0.7"
                android:text="Medium Text"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textIsSelectable="true" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_below="@+id/clusterDetail6"
            android:id="@+id/clusterDetail7"
            android:layout_centerHorizontal="true"

            android:weightSum="1">

            <TextView
                android:id="@+id/clusterTemplateCreateTimeID1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="5sp"
                android:layout_marginTop="20sp"
                android:layout_weight="0.3"
                android:text="@string/create_time"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/clusterTemplateCreateTimeID"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:layout_weight="0.7"
                android:text="Medium Text"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textIsSelectable="true" />


        </LinearLayout>


    </RelativeLayout>

</ScrollView>